# Vala-simple-serial

./: README.md  meson.build  org.example.App.json  org.example.vala-terminal.json  run_term.sh
data/: meson.build  org.example.App.appdata.xml.in  org.example.App.gschema.xml  org.example.vala-terminal.appdata.xml.in  org.example.vala-terminal.desktop.in  org.example.vala-terminal.gschema.xml
po/: meson.build
src/: main.vala  meson.build  port.c  vala_terminal.gresource.xml  window.ui  window.vala
